Creation of all 5 individual markdown files (with supressed HTMLs) and initial changes to the ReadMe file

--- a/Project3_Main_File.Rmd
+++ b/Project3_Main_File.Rmd
@@ -3,7 +3,8 @@ title: "Diabetes Data Analysis"
 author: "Rocco Matarazzo & Karthik Edupuganti"
 date: "`r Sys.Date()`"
 output: 
-  github_document
+  github_document:
+      html_preview: false
 params:
   eduLevel: No School
 ---
